fix issue with 'X' button on appearing on mobile
- desktop version uses hover effect

--- a/reactjs/src/components/ToDoItem.css
+++ b/reactjs/src/components/ToDoItem.css
@@ -70,10 +70,6 @@ input[type="checkbox"]:checked+label {
   @apply text-gray-300 dark:text-gray-600;
 }
 
-.checkbox-wrapper button {
-  display: none;
-}
-
 .checkbox-wrapper:first-of-type {
   @apply rounded-t-md
 }
